# remote

./: .gitignore  CMakeLists.txt
CMakeModules/: FindLIBVLC.cmake
Client/src/: Client.cpp  Client.hpp  WriteStream.hpp  main.cpp
Server/src/: Client.cpp  Client.hpp  Server.cpp  Server.hpp  WriteStream.hpp  main.cpp
